--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conversor de Unidades Físicas e Técnicas - Ferramenta Essencial para Estudantes</title>
+  <title>Conversor Universal de Unidades - Ferramenta Essencial para Estudantes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +23,7 @@
       <button class="theme-toggle" id="themeToggle">🌑</button>
     </div>
 
-    <h1>Conversor de Unidades Físicas e Técnicas</h1>
+    <h1>Conversor Universal de Unidades</h1>
     <p class="description">
       Converta rapidamente entre diversas unidades. Agora com correções conceituais SI / IEC, novas categorias de Torque
       e Radioatividade, e validações precisas.
@@ -70,7 +70,7 @@
           científcia</label>
       </div>
 
-      <div style="display: flex; gap: 10px;">
+      <div class="cx-button-group">
         <button onclick="converter()" style="flex: 2;">Converter</button>
         <button onclick="clearInputs()" style="flex: 1; background-color: #6c757d;">Limpar</button>
       </div>
